# Shrunk-A-Text-Story-Moddable

./: .replit  README.md  main.py  pyproject.toml  upd2.sh  update.sh
Guide/: guide.md
data/: titleText.txt
data/storydata/: cstored.json
engine/fsys/: read.py
engine/interactions/: directkey.py
engine/menus/: mainMenu.py  startMenu.py
engine/story/: disclaimer.py  typewriter.py
engine/utils/: __init__.py
forge/: mod.py
gutils/: auth.py  dbtools.py
mods/: mod1.mod  mod2.mod
old/: cfg.py  main.py
old/forge/: mod.py
old/gutils/: __init__.py  auth.py  dbtools.py  story.py
old/mods/: mod1.mod
old/storydb/: sparrowChoices.json  sparrowEncounters.json
old/users/: dev.txt  test.txt
storydb/: storyline.json
