[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
pandas = "^1.5.1"
pyfiglet = "^0.8.post1"
fkeycapture = "^1"
urllib3 = "1.26.15"
colored = "^2.2.3"
aiohttp = "^3"
pluggy = "^1.3.0"
python-forge = "^18.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
